agrego emojis al titulo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <h1>Lista de Compras</h1>
+    <h1>🍉 Lista de Compras 🥩</h1>
     <div id="mensaje"></div>
     <div id="entrada">
         <button id="iniciarBtn">Iniciar</button>
